CSS/style.css
/*
* ----- HEADER STYLE -----
*/

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-family: Verdana, sans-serif;
  font-size: 14px;
  font-weight: bold;
  height: 80px;
  padding: 3px 2px;
  border-bottom-color: black;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  z-index: 10;
  background-color: white;
}
.titleHead{
  flex-wrap: nowrap;
  align-self: center;
  margin: 21 10;
  <!-background-color: yellow;-->
}

.header li{
  display: inline;
  padding: 10px;
  margin: 4px;
  height: 20px;
  <!-background-color: blue;-->
}

.logo{
  display: flex;
  color: MediumAquamarine;
  margin-left: 20px;
  <!-background-color: red;-->
}

.navHead a{
  color: black;
  <!-background-color: MediumAquamarine;-->
}

/*
* ----- CONTAINER STYLE -----
*/

/*
* ----- Headlines STYLE -----
*/
h1{
  font-family: Georgia;
  font-weight: bold;
  font-size: 40px;
  color: white;
  margin: 0px;
}

h2 {
  font-family: Georgia;
  font-weight: bold;
  font-size: 30px;
  color: white;
  text-align: center;
}

h3{
  font-family: Georgia;
  font-weight: bold;
  font-size: 20px;
  text-align: left;
  margin-bottom: 0px;
}

h3.news{
  font-size: 16px;
  font-weight: bold;
  text-align: center;
}


/* ------- FlexBox Properties ------ */

.container{
display: inline-flex;
align-items: stretch;
justify-content: center;
flex: 0 0 200px;
margin-top: 120px;
width: 100%;
height: auto;
background-color: lightgrey;
position: absolute;
left: 0px;
right: 0px;
}

.columnFirst{
display: flex;
justify-content: space-between;
flex-flow: row wrap;
min-width: 630px;
max-width: 630px;
background-color: MediumAquamarine;
margin: 10px;
}

.columnSecond{
display: flex;
flex-direction: column;
min-width: 300px;
max-width: 300px;
background-color: MediumAquamarine;
margin: 10;
}

.columnThird{
  display: flex;
  flex-direction: column;
  min-width: 240px;
  max-width: 240px;
  background-color: MediumAquamarine;
  margin: 10;
}

.news{
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  flex-direction: column;
  width: 100%;
  height: auto;
  border: 1px solid red;
  background-color: yellow;
  /*margin: 5px;*/
  }

.new1{
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  flex-direction: row;
  /*flex-flow: : column nowrap;*/
  flex-wrap: wrap;
  width: 100%;
  height: auto;
  border: 1px solid red;
  background-color: orange;
  /*margin: 5px;*/
}

.new2{
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: row;
  /*flex-flow: : column nowrap;*/
  flex-wrap: wrap;
  width: 48%;
  /*height: auto;*/
  min-height: 250px;
  border: 0px solid red;
  background-color: orange;
  margin-top: 5px;
  /*margin: 5px;*/
}

.newsBites{
display: flex;
flex-direction: column;
justify-content: flex-start;
align-items: center;
background-color: WhiteSmoke;
height: 20px;
width: 240px;
border-bottom-color: 1 solid black;
}

.headline{
  width: 20px;
  height: 30px;
  background-color: pink;
  border: 1px solid black;
}

.mainImage{
  width: 630px;
  height: 300px;
  border: 1px solid white;
  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png);
}

.image{
  width: 300px;
  height: 300px;
  border: 0px solid white;
  }

.biteHEAD{
  display: flex;
  justify-content: center;
  align-items: center;
  width: 240px;
  height: 60px;
  background-color: white;
}

#fall.image{
  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png);
}

#hipster.image{
  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png);
}

#cats.image{
  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png);
}

#cookie.image{
  width: 100%;
  height: 250px;
  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png);
}

.mainStory{
  width: 630px;
  height: auto;
  background-color: white;
  border: 1px solid black;
}

